audi app with renamed fields

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aem-guides-wknd-app",
+  "name": "base42-audi-car-model",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
